--- a/package.json
+++ b/package.json
@@ -1,24 +1,25 @@
 {
-  "name": "grunt-deployments",
-  "description": "Deploy (push/pull) MYSQL databases using Grunt",
-  "version": "0.2.0",
-  "homepage": "https://github.com/getdave/grunt-deployments",
+  "private": true,
+  "name": "grunt-mysql-dump",
+  "description": "Dump MYSQL databases using Grunt",
+  "version": "0.0.1",
+  "homepage": "https://github.com/DigitalCuisine/grunt-mysql-dump",
   "author": {
-    "name": "David Smith",
-    "email": "getdavemail@gmail.com",
-    "url": "http://www.aheadcreative.com"
+    "name": "Digital Cuisine",
+    "email": "chef@digitalcuisine.fr",
+    "url": "http://www.digitalcuisine.fr"
   },
   "repository": {
     "type": "git",
-    "url": "git@github.com:getdave/grunt-deployments.git"
+    "url": "git@github.com:digitalcuisine/grunt-mysql-dump.git"
   },
   "bugs": {
-    "url": "https://github.com/getdave/grunt-deployments/issues"
+    "url": "https://github.com/digitalcuisine/grunt-mysql-dump/issues"
   },
   "licenses": [
     {
       "type": "MIT",
-      "url": "https://github.com/getdave/grunt-deployments/blob/master/LICENSE-MIT"
+      "url": "https://github.com/digitalcuisine/grunt-mysql-dump/blob/master/LICENSE-MIT"
     }
   ],
   "main": "Gruntfile.js",
@@ -45,7 +46,6 @@
     "deployments",
     "deploy",
     "database",
-    "mysql",
-    "wordpress"
+    "mysql"
   ]
 }
